--- a/datasets/kyfromabove.yaml
+++ b/datasets/kyfromabove.yaml
@@ -94,7 +94,7 @@ Resources:
     - '[KyFromAbove Stac-Browser - Phase 1 Orthos](https://kygeonet.ky.gov/collections/orthos-phase1)'
     - '[KyFromAbove Stac-Browser - Phase 2 Orthos](https://kygeonet.ky.gov/collections/orthos-phase2)'
     - '[KyFromAbove Stac-Browser - Phase 3 Orthos](https://kygeonet.ky.gov/collections/orthos-phase3)'
-    - 'KyFromAbove Explorer [oblique-viewer](https://explore.kyfromabove.ky.gov/)'
+    - '[KyFromAbove Explorer oblique-viewer](https://explore.kyfromabove.ky.gov/)'
     - '[STAC V1.0.0 endpoint](https://spved5ihrl.execute-api.us-west-2.amazonaws.com/)'
     - '[Browse Bucket](https://kyfromabove.s3.us-west-2.amazonaws.com/index.html#imagery/)'
   - Description: KyFromAbove ortho imagery for the Commonwealth of Kentucky organized in a 5000x5000 foot grid. Each image tile has been converted to a COG format. Phase 1 and 2 data are organized by acquisition year and are currently available for use. Phase 3 is organized by year and season, as imagery was acquired during the fall and spring leaf-off seasons as sun angle permitted.
