--- a/datasets/eot-web-archive.yaml
+++ b/datasets/eot-web-archive.yaml
@@ -2,8 +2,8 @@ Name: End of Term Web Archive Dataset
 Description: >
   The End of Term Web Archive (EOT) captures and saves U.S.
   Government websites at the end of presidential administrations.  The EOT has
-  thus far preserved websites from administration changes in 2008, 2012, 2016,
-  and 2020.  Data from these web crawls have been made openly available in
+  thus far preserved websites from administration changes in 2008, 2012, 2016, 2020 
+  and 2024.  Data from these web crawls have been made openly available in
   several formats in this dataset.
 Documentation: https://eotarchive.org/data/
 Contact: Mark Phillips <mark.phillips@unt.edu>, Sawood Alam <sawood@archive.org>
