--- a/datasets/huj-herbarium.yaml
+++ b/datasets/huj-herbarium.yaml
@@ -23,7 +23,7 @@ License: CC-BY-SA 4.0
 Citation: Vascular plants - Herbarium of The National Natural History Collections was accessed on DATE from https://registry.opendata.aws/huj-herbarium.
 Resources:
   - Description: HUJ Herbarium Collection Images
-    ARN:
+    ARN: arn:aws:s3:::hujinnhc/specify_assets/
     Region: il-central-1
     Type: S3 bucket
     Explore:
@@ -48,3 +48,4 @@ DataAtWork:
 DeprecatedNotice:
 ADXCategories:
   -    
+
