--- a/datasets/cmas-data-warehouse.yaml
+++ b/datasets/cmas-data-warehouse.yaml
@@ -65,7 +65,7 @@ Resources:
     Region: us-east-1
     Type: S3 Bucket
     Explore:
-    - '[Browse Bucket](https://https://epa-equates-v1.s3.amazonaws.com/index.html)'
+    - '[Browse Bucket](https://epa-equates-v1.s3.amazonaws.com/index.html)'
     - '[EPA CMAQ 2019 3D Gridded and Column data from EQUATES Project](https://aws.amazon.com/marketplace/pp/prodview-kziefcewnxcxe?sr=0-5&ref_=beagle&applicationId=AWSMPContessa)'
   - Description: CMAQ 2023 12US4 CRACMM3 Modeling Platform
     ARN: arn:aws:s3::::::cmaq-12us4-cracmm3-modeling-platform-2023
