--- a/datasets/huj-herbarium.yaml
+++ b/datasets/huj-herbarium.yaml
@@ -25,7 +25,7 @@ Resources:
   - Description: HUJ Herbarium Collection Images
     ARN: arn:aws:s3:::hujinnhc/specify_assets/
     Region: il-central-1
-    Type: S3 bucket
+    Type: S3 Bucket
     Explore:
 DataAtWork:
   Tutorials:
@@ -48,4 +48,5 @@ DataAtWork:
 DeprecatedNotice:
 ADXCategories:
   -    
+
 
