--- a/datasets/earthmover-era5.yaml
+++ b/datasets/earthmover-era5.yaml
@@ -51,13 +51,13 @@ Citation: >
   https://doi.org/10.5065/BH6N-5N20.
 Resources:
   - Description: ERA5 Zarr + Icechunk Data (Cloud-Optimized)
-    ARN: TODO
+    ARN: arn:aws:s3:::earthmover-icechunk-era5
     Region: us-east-1
     Type: S3 Bucket
     Explore:
       - TODO
   - Description: Notifications for the ERA5 Zarr + Icechunk dataset
-    ARN: TODO
+    ARN: arn:aws:sns:us-east-1:871265417473:earthmover-icechunk-era5-object_created
     Region: us-east-1
     Type: SNS Topic
 DataAtWork:
