--- a/datasets/longbench.yaml
+++ b/datasets/longbench.yaml
@@ -4,7 +4,7 @@ Description: >
 Documentation: https://github.com/mritchielab/LongBench.io
 Contact: mritchie@wehi.edu.au
 ManagedBy: Richie Lab, Walter and Eliza Hall Institute of Medical Research
-UpdateFrequency: New data is added as soon as it is available.
+UpdateFrequency: New data will be added as soon as they are available.
 Tags:
   - benchmark
   - long read sequencing
@@ -18,7 +18,7 @@ Tags:
   - cancer
   - life sciences
 
-License: "[CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/)"
+License: CC BY-4.0
 Resources:
   - Description: Bulk, single-cell, and single-nucleus RNA-seq data from the LongBench project, covering eight human lung cancer cell lines. Bulk sequencing (FASTQ) was performed on ONT PCR-cDNA, ONT direct RNA (including pod5 files for RNA modification analysis), PacBio Kinnex, and Illumina platforms. Single-cell and single-nucleus sequencing (FASTQ) was performed on ONT PCR-cDNA, PacBio Kinnex, and Illumina platforms. Aligned reads (BAM), variant calls (VCF), and processed gene expression data are also provided, along with reference genome annotations (GTF and FASTA).
     ARN: arn:aws:s3:::longbench-data
