--- a/datasets/ucsf-rmac.yaml
+++ b/datasets/ucsf-rmac.yaml
@@ -1,5 +1,5 @@
 Name: UCSF Renal Mass CT Dataset
-Description: This dataset provides a set of 831 3D Multiphase CT exams of renal masses, registered across phases with annotations identifying the masses
+Description: This dataset provides a set of 831 3D Multiphase CT exams of renal masses, registered across phases with annotations identifying the masses.
 Documentation: https://github.com/LarsonLab/UCSF-RMaC
 Contact: "[Peder Larson](peder.larson@ucsf.edu)]"
 ManagedBy: "[UCSF Larson Advanced Imaging Lab](https://larsonlab.github.io/)"
