--- a/datasets/panstarrs.yaml
+++ b/datasets/panstarrs.yaml
@@ -12,7 +12,7 @@ Tags:
 License: STScI hereby grants the non-exclusive, royalty-free, non-transferable, worldwide right and license to use, reproduce, and publicly display in all media data from the PS1 surveys.
 Resources:
   - Description: PS1 DR1 and DR2 image files
-    ARN: arn:aws:s3:::stpubdata/ps1
+    ARN: arn:aws:s3:::stpubdata/panstarrs/ps1
     Region: us-east-1
     Type: S3 Bucket
     RequesterPays: False
