Add Arnis project to terrain-tiles.yaml

--- a/datasets/terrain-tiles.yaml
+++ b/datasets/terrain-tiles.yaml
@@ -89,6 +89,10 @@ DataAtWork:
       URL: https://app.shadowmap.org/
       AuthorName: Shadowmap Technologies GmbH
       AuthorURL: https://shadowmap.org
+    - Title: "Arnis: Generate any location from the real world in Minecraft with a high level of detail"
+      URL: https://github.com/louis-e/arnis
+      AuthorName: Louis Erbkamm
+      AuthorURL: https://louisdev.de/
   Publications:
     - Title: "Landscape transformations produce favorable roosting conditions for turkey vultures and black vultures"
       URL: https://www.nature.com/articles/s41598-021-94045-3
