--- a/datasets/snpeff.yaml
+++ b/datasets/snpeff.yaml
@@ -5,6 +5,7 @@ Documentation: https://pcingola.github.io/SnpEff/
 ManagedBy: "[Pablo Cingolani](http://www.linkedin.com/in/pablocingolani)"
 UpdateFrequency: Monthly
 Tags:
+  - snpeff
   - life sciences
   - genomic
   - variant annotation
