--- a/datasets/ibl-reproducible-ephys.yaml
+++ b/datasets/ibl-reproducible-ephys.yaml
@@ -1,6 +1,6 @@
 Name: IBL Neuropixels Reproducible Ephys Data on AWS
 Description: Electrophysiological recordings acquired using Neuropixels probes in different mice and labs, targeting the same brain locations (including posterior parietal cortex, hippocampus, and thalamus).
-Documentation: https://int-brain-lab.github.io/iblenv/notebooks_external/data_release_repro_ephys.html
+Documentation: https://docs.internationalbrainlab.org/notebooks_external/2024_data_release_repro_ephys.html
 Contact: info@internationalbrainlab.org
 ManagedBy: "[International Brain Laboratory](https://www.internationalbrainlab.com)"
 UpdateFrequency: TBD
@@ -28,20 +28,24 @@ DataAtWork:
       AuthorName: IBL Data Architecture Working Group
       AuthorURL:  https://github.com/orgs/int-brain-lab/teams/data-architecture-wg/members
   Tutorials:
-    - Title: Download the public datasets
-      URL: https://int-brain-lab.github.io/iblenv/notebooks_external/data_download.html
+    - Title: Compute the RIGOR metrics
+      URL: https://github.com/int-brain-lab/paper-reproducible-ephys/blob/2397f2cf5b92689f39e94ef7d8f76f0a7e2bd2a7/RIGOR_script.ipynb
+      AuthorName: IBL Data Architecture Working Group
+      AuthorURL: https://github.com/orgs/int-brain-lab/teams/data-architecture-wg/members
+    - Title: Download the public data via ONE
+      URL: https://docs.internationalbrainlab.org/notebooks_external/data_download.html
       AuthorName: IBL Data Architecture Working Group
       AuthorURL:  https://github.com/orgs/int-brain-lab/teams/data-architecture-wg/members
     - Title: Find data associated with a release or publication
-      URL: https://int-brain-lab.github.io/iblenv/notebooks_external/data_download.html#Find-data-associated-with-a-release-or-publication
+      URL: https://docs.internationalbrainlab.org/notebooks_external/data_download.html#Find-data-associated-with-a-release-or-publication
       AuthorName: IBL Data Architecture Working Group
       AuthorURL: https://github.com/orgs/int-brain-lab/teams/data-architecture-wg/members
     - Title: Loading Data
-      URL: https://int-brain-lab.github.io/iblenv/loading_examples.html#
+      URL: https://docs.internationalbrainlab.org/loading_examples.html
       AuthorName: IBL Data Architecture Working Group
       AuthorURL:  https://github.com/orgs/int-brain-lab/teams/data-architecture-wg/members
   Publications:
-    - Title: Reproducibility of in-vivo electrophysiological measurements in mice
-      URL: https://doi.org/10.1101/2022.05.09.491042
+    - Title: Reproducibility of in vivo electrophysiological measurements in mice
+      URL: https://doi.org/10.7554/eLife.100840.1
       AuthorName: International Brain Laboratory et al.
       AuthorURL: www.internationalbrainlab.com
