--- a/datasets/ibl-brain-wide-map.yaml
+++ b/datasets/ibl-brain-wide-map.yaml
@@ -1,6 +1,6 @@
 Name: IBL Neuropixels Brainwide Map on AWS
-Description: Electrophysiological recordings of mouse brain activity acquired using Neuropixels probes and accompanying behavioral data.
-Documentation: https://int-brain-lab.github.io/iblenv/notebooks_external/data_release_brainwidemap.html
+Description: Electrophysiological recordings of mouse brain activity acquired during a decision making task.
+Documentation: https://docs.internationalbrainlab.org/notebooks_external/2025_data_release_brainwidemap.html
 Contact: info@internationalbrainlab.org
 ManagedBy: "[International Brain Laboratory](https://www.internationalbrainlab.com)"
 UpdateFrequency: TBD
@@ -40,15 +40,24 @@ DataAtWork:
       URL: https://colab.research.google.com/drive/1th3MRZGHMSaeAvGmKGJQ84rBk8eEI4Fu
       AuthorName: IBL Data Architecture Working Group
       AuthorURL:  https://github.com/orgs/int-brain-lab/teams/data-architecture-wg/members
-    - Title: Download the public datasets
-      URL: https://int-brain-lab.github.io/iblenv/notebooks_external/data_download.html
+    - Title: Download the public data via ONE
+      URL: https://docs.internationalbrainlab.org/notebooks_external/data_download.html
       AuthorName: IBL Data Architecture Working Group
       AuthorURL:  https://github.com/orgs/int-brain-lab/teams/data-architecture-wg/members
     - Title: Find data associated with a release or publication
-      URL: https://int-brain-lab.github.io/iblenv/notebooks_external/data_download.html#Find-data-associated-with-a-release-or-publication
+      URL: https://docs.internationalbrainlab.org/notebooks_external/data_download.html#Find-data-associated-with-a-release-or-publication
       AuthorName: IBL Data Architecture Working Group
       AuthorURL: https://github.com/orgs/int-brain-lab/teams/data-architecture-wg/members
     - Title: Loading Data
-      URL: https://int-brain-lab.github.io/iblenv/loading_examples.html#
+      URL: https://docs.internationalbrainlab.org/loading_examples.html
       AuthorName: IBL Data Architecture Working Group
       AuthorURL:  https://github.com/orgs/int-brain-lab/teams/data-architecture-wg/members
+  Publications:
+    - Title: A brain-wide map of neural activity during complex behaviour
+      URL: https://doi.org/10.1038/s41586-025-09235-0
+      AuthorName: International Brain Laboratory et al.
+      AuthorURL: www.internationalbrainlab.com
+    - Title: Brain-wide representations of prior information in mouse decision-making
+      URL: https://doi.org/10.1038/s41586-025-09226-1
+      AuthorName: International Brain Laboratory et al.
+      AuthorURL: www.internationalbrainlab.com
