changed ARN and Explore url

--- a/datasets/mosaic.yaml
+++ b/datasets/mosaic.yaml
@@ -13,11 +13,11 @@ License: CC BY 4.0
 Citation:
 Resources:
   - Description: HDF5 files containing preprocessed fMRI data
-    ARN: arn:aws:account::042585258830:account
+    ARN: arn:aws:s3:::mosaic-fmri
     Region: us-east-1
     Type: S3 Bucket
     Explore:
-    - '[Browse Bucket](https://042585258830:account.s3.amazonaws.com/index.html)'
+    - '[Browse Bucket](https://mosaic-fmri.s3.amazonaws.com/index.html)'
 DataAtWork:
   Tutorials:
     - Title: Load HDF5 file (Jupyter notebook)
