ok:Update ibl-autism.yaml

--- a/datasets/ibl-autism.yaml
+++ b/datasets/ibl-autism.yaml
@@ -11,7 +11,7 @@ Tags:
   - neurophysiology
   - open source software
   - Mus musculus
-  - autism
+  - autism spectrum disorder
 License: CC-BY 4.0
 Resources:
   - Description: Project data in public bucket
