ok: Update mosaic.yaml

--- a/datasets/mosaic.yaml
+++ b/datasets/mosaic.yaml
@@ -5,6 +5,7 @@ Contact: blahner@mit.edu
 ManagedBy: Massachusetts Institute of Technology, Georgia Tech
 UpdateFrequency: New data is uploaded as researchers preprocess their fMRI data according to MOSAIC format and submit.
 Tags:
+  - aws-pds
   - fMRI
   - Vision
   - Image
