ok:Update pasteur-logan.yaml
Adding the preprint

--- a/datasets/pasteur-logan.yaml
+++ b/datasets/pasteur-logan.yaml
@@ -52,4 +52,7 @@ DataAtWork:
       URL: https://github.com/asl/f2sz
       AuthorName: Anton Korobeynikov
       AuthorURL: https://anton.korobeynikov.info/
-
+  Publications:
+    - Title: Logan - Planetary-Scale Genome Assembly Surveys Life’s Diversity
+      URL: https://www.biorxiv.org/content/10.1101/2024.07.30.605881v2.full
+      AuthorName: Chikhi R., Lemane T., Loll-Krippleber R., et al (2025)
