--- a/datasets/mosaic.yaml
+++ b/datasets/mosaic.yaml
@@ -6,10 +6,12 @@ ManagedBy: Massachusetts Institute of Technology, Georgia Tech
 UpdateFrequency: New data is uploaded as researchers preprocess their fMRI data according to MOSAIC format and submit.
 Tags:
   - aws-pds
-  - fMRI
-  - Vision
-  - Image
-  - Video
+  - brain images
+  - brain models
+  - hdf5
+  - neuroimaging
+  - neuroscience
+  - machine learning
 License: CC BY 4.0
 Citation:
 Resources:
