--- a/datasets/apex.yaml
+++ b/datasets/apex.yaml
@@ -24,6 +24,7 @@ Tags:
   - brain models
   - analysis ready data
   - nifti
+  - aws-pds
 License: '[CC BY](https://creativecommons.org/licenses/by/4.0)'
 Citation:
 Resources:
