ok: Update eai-essential-web-v1.yaml
Updating tags to reflect tags from https://github.com/awslabs/open-data-registry/blob/main/tags.yaml

--- a/datasets/eai-essential-web-v1.yaml
+++ b/datasets/eai-essential-web-v1.yaml
@@ -8,8 +8,8 @@ Tags:
   - aws-pds
   - machine learning
   - natural language processing
-  - web data
-  - text
+  - web archive
+  - text analysis
 License: 'Essential-Web-v1.0 contributions are made available under the [ODC attribution license](https://opendatacommons.org/licenses/by/odc_by_1.0_public_text.txt); however, users should also abide by the [Common Crawl - Terms of Use](https://commoncrawl.org/terms-of-use). We do not alter the license of any of the underlying data.'
 Resources:
   - Description: 'Essential-Web v1.0: 24T tokens of organized web data'
