ok: Update noaa-nos-cora.yaml

--- a/datasets/noaa-nos-cora.yaml
+++ b/datasets/noaa-nos-cora.yaml
@@ -85,4 +85,4 @@ DataAtWork:
   Usage Examples:
     - Tutorials: Python-based Jupyter notebooks to access, analyze, visualize, and transform CORA datasets are available in the [CORA GitHub Repository](https://github.com/NOAA-CO-OPS/CORA-Coastal-Ocean-Reanalysis-CORA/tree/main?tab=readme-ov-file).
     - Maps: [CORA-GEC Maximum Water Level Elevation Nodes, CORA-GEC 500 Meter Grid](https://noaa.maps.arcgis.com/apps/mapviewer/index.html?webmap=92321613d16f400894b9b7330ae2fab4)
-    - [Use Cases](https://tidesandcurrents.noaa.gov/cora.html#usecase)
+    - Use cases: https://tidesandcurrents.noaa.gov/cora.html#usecase
