ok: Update coralreef-image-classification-training.yaml

--- a/datasets/coralreef-image-classification-training.yaml
+++ b/datasets/coralreef-image-classification-training.yaml
@@ -5,6 +5,7 @@ Contact: contact@datamermaid.org
 ManagedBy: "[MERMAID](https://datamermaid.org/)"
 UpdateFrequency: Each partner organization updates on their own cadence. MERMAID updates once per day.
 Tags:
+  - aws-pds
   - coastal
   - conservation
   - coral reef
