--- a/datasets/noaa-nos-cora.yaml
+++ b/datasets/noaa-nos-cora.yaml
@@ -67,35 +67,35 @@ Tags:
   - oceans
 License: NOAA data disseminated through NODD are open to the public and can be used as desired.<br/> <br/>NOAA makes data openly available to ensure maximum use of our data, and to spur and encourage exploration and innovation throughout the industry. NOAA requests attribution for the use or dissemination of unaltered NOAA data. However, it is not permissible to state or imply endorsement by or affiliation with NOAA. If you modify NOAA data, you may not state or imply that it is original, unaltered NOAA data.
 Resources:
-  - Description: NOAA’s Coastal Ocean Reanalysis (CORA) Dataset NetCDF
+  - Description: "NOAA’s Coastal Ocean Reanalysis (CORA) Dataset NetCDF"
     ARN: arn:aws:s3:::noaa-nos-cora-pds
     Region: us-east-1
     Type: S3 Bucket
     Explore:
     - '[Browse Bucket](https://noaa-nos-cora-pds.s3.amazonaws.com/index.html)'
-  - Description: NOAA’s Coastal Ocean Reanalysis (CORA) Dataset Notifications
+  - Description: "NOAA’s Coastal Ocean Reanalysis (CORA) Dataset Notifications"
     ARN: arn:aws:sns:us-east-1:709902155096:NewNOSCORAObject
     Region: us-east-1
     Type: SNS Topic
 
 DataAtWork:
   Tutorials:
-    - Title: Using Python to Access Coastal Ocean Reanalysis (CORA) Data 
+    - Title: "Using Python to Access Coastal Ocean Reanalysis (CORA) Data"
       URL: https://github.com/NOAA-CO-OPS/CORA-Coastal-Ocean-Reanalysis-CORA
-      AuthorName: NOAA's Center for Operational Oceanographic Products and Services 
+      AuthorName: "NOAA's Center for Operational Oceanographic Products and Services" 
       AuthorURL: https://tidesandcurrents.noaa.gov/
 
   Tools & Applications:
     - Title: Coastal Ocean Reanalysis Use cases
       URL: https://tidesandcurrents.noaa.gov/cora.html#usecase
-      AuthorName: NOAA's Center for Operational Oceanographic Products and Services 
+      AuthorName: "NOAA's Center for Operational Oceanographic Products and Services" 
       AuthorURL: https://tidesandcurrents.noaa.gov/
   
   Publications:
-    - Title: NOAA Technical Report NOS CO-OPS 108: NOAA’s Coastal Ocean Reanalysis: Gulf of Mexico, Atlantic, and Caribbean (January 2025)
+    - Title: "NOAA Technical Report NOS CO-OPS 108: NOAA’s Coastal Ocean Reanalysis: Gulf of Mexico, Atlantic, and Caribbean (January 2025)"
       URL: https://doi.org/10.25923/5ypp-4e84 
       AuthorName: Keeney, Analise; Dusek, Gregory; Callahan, John; Ratcliff, John; Jima, Tigist; Brooks, William; Marcy, Doug; Blanton, Brian; Tilson, Jeffrey; Asher, Taylor G.; Leuttich, Richard A.; Widlansky, Matthew J.; Rose, Linta; Morse, Cheryl; Haddad, Jana; & Waring, Blake
 
-    - Title: Assessment of water levels from 43 years of NOAA’s Coastal Ocean Reanalysis (CORA) for the Gulf of Mexico and East Coasts
+    - Title: "Assessment of water levels from 43 years of NOAA’s Coastal Ocean Reanalysis (CORA) for the Gulf of Mexico and East Coasts"
       URL: https://doi.org/10.3389/fmars.2024.1381228  
       AuthorName: Rose, Linta; Widlansky, Matthew J.; Feng, Xue; Thompson, Thompson; Asher, Taylor G.; Dusek, Gregory; Blanton, Blanton; Luettich, Richard A. Jr.; Callahan, John; Brooks, William; Keeney, Analise; Haddad, Jana; Sweet, William; Genz, Ayesha; Hovenga, Paige; Marra, John & Tilson, Jeffrey
