--- a/datasets/noaa-nos-cora.yaml
+++ b/datasets/noaa-nos-cora.yaml
@@ -14,8 +14,11 @@ Description: |
         . Centroids: 300-400 meters 
         . Gridded: 500 meters
         . Projection: 1983 Contiguous USA Albers projection (EPSG:5070)
-    . Update Frequency: Product dependent. At minimum, annually.
-
+    
+  Documentation:
+    . ["NOAA Technical Report NOS CO-OPS 108: NOAA’s Coastal Ocean Reanalysis: Gulf of Mexico, Atlantic, and Caribbean (January 2025)"](https://doi.org/10.25923/5ypp-4e84)
+  UpdateFrequency:
+    . Product dependent. At minimum, annually.
   Datasets: |
   Water level and wave datasets resulting from the computation, assimilation, validation, and optimization reanalysis datasets. All products are available in NetCDF (.nc) format
     . fort.63.nc - Water level elevation
