ok: Update noaa-nos-cora.yaml

--- a/datasets/noaa-nos-cora.yaml
+++ b/datasets/noaa-nos-cora.yaml
@@ -14,11 +14,7 @@ Description: |
         . Centroids: 300-400 meters 
         . Gridded: 500 meters
         . Projection: 1983 Contiguous USA Albers projection (EPSG:5070)
-    
-  Documentation:
-    . ["NOAA Technical Report NOS CO-OPS 108: NOAA’s Coastal Ocean Reanalysis: Gulf of Mexico, Atlantic, and Caribbean (January 2025)"](https://doi.org/10.25923/5ypp-4e84)
-  UpdateFrequency:
-    . Product dependent. At minimum, annually.
+
   Datasets: |
   Water level and wave datasets resulting from the computation, assimilation, validation, and optimization reanalysis datasets. All products are available in NetCDF (.nc) format
     . fort.63.nc - Water level elevation
@@ -38,6 +34,12 @@ Description: |
     . CORA-V1.1-swan_TPS.63: Hourly peak wave periods 
     . CORA-V1.1-swan_HS.63: Hourly significant wave heights 
     . CORA-V1.1-Grid: Hourly water levels interpolated from model nodes to uniform 500-meter resolution grid 
+
+Documentation: |
+    . ["NOAA Technical Report NOS CO-OPS 108: NOAA’s Coastal Ocean Reanalysis: Gulf of Mexico, Atlantic, and Caribbean (January 2025)"](https://doi.org/10.25923/5ypp-4e84)
+
+UpdateFrequency:
+    . Product dependent. At minimum, annually.
 
 License: |
   NOAA data disseminated through NODD are open to the public and can be used as desired.
