--- a/datasets/deepdrug-dpeb.yml
+++ b/datasets/deepdrug-dpeb.yml
@@ -7,9 +7,9 @@ UpdateFrequency: Initial release; maintained for at least 2 years with updates p
 Tags:
   - bioinformatics
   - protein
-  - structural-biology
-  - machine-learning
-  - graph-neural-networks
+  - structural biology
+  - machine learning
+  - life sciences
 License: MIT
 Citation: "Sajol MSI et al. DeepDrug Protein Embeddings Bank (DPEB) was accessed on [DATE] at https://registry.opendata.aws/dpeb"
 Resources:
