--- a/datasets/mosaic.yaml
+++ b/datasets/mosaic.yaml
@@ -16,11 +16,11 @@ License: CC BY 4.0
 Citation:
 Resources:
   - Description: HDF5 files containing preprocessed fMRI data
-    ARN: arn:aws:s3:::mosaic-fmri
-    Region: us-east-1
+    ARN: arn:aws:s3:::mosaicfmri
+    Region: us-west-2
     Type: S3 Bucket
     Explore:
-    - '[Browse Bucket](https://mosaic-fmri.s3.amazonaws.com/index.html)'
+    - '[Browse Bucket](https://mosaicfmri.s3.amazonaws.com/index.html)'
 DataAtWork:
   Tutorials:
     - Title: Load HDF5 file (Jupyter notebook)
