ok: Update clinical-ultrasound-image-data.yaml
Added LS and pds tags

--- a/datasets/clinical-ultrasound-image-data.yaml
+++ b/datasets/clinical-ultrasound-image-data.yaml
@@ -11,6 +11,8 @@ Tags:
   - clinical imaging
   - diagnosis
   - treatment
+  - life sciences
+  - aws-pds
 License: [CC-BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/) 
 Resources:
   - Description: Clinical Ultrasound Image Repository
