ok: Update clinical-ultrasound-image-data.yaml
Removing tags not available on tags.yaml

--- a/datasets/clinical-ultrasound-image-data.yaml
+++ b/datasets/clinical-ultrasound-image-data.yaml
@@ -6,11 +6,8 @@ ManagedBy: [MONAI Development Team](https://github.com/Project-MONAI/MONAI)
 UpdateFrequency: This is a static dataset; however, tutorials and resources will be updated as they are developed.
 Tags:
   - medicine
-  - ultrasound
-  - routine data
-  - clinical imaging
-  - diagnosis
-  - treatment
+  - medical imaging
+  - machine learning
   - life sciences
   - aws-pds
 License: [CC-BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/) 
