attempt to fix syntax errors around external links

--- a/datasets/clinical-ultrasound-image-data.yaml
+++ b/datasets/clinical-ultrasound-image-data.yaml
@@ -2,7 +2,7 @@ Name: Clinical Ultrasound Image Repository
 Description: Generic Clinical Ultrasound Data from Random Subjects acquired for Clinical Reasons, to be used for Developing Artificial Intelligence Applications. This dataset is complete with 2000 studies from 2000 subjects (one third each from abdominal, cardiac, and OB/GYN cases)
 Documentation: https://clinical-ultrasound-image-repository.s3.amazonaws.com/index.html
 Contact: shuver@nvidia.com
-ManagedBy: [MONAI Development Team](https://github.com/Project-MONAI/MONAI)
+ManagedBy: "[MONAI Development Team](https://github.com/Project-MONAI/MONAI)"
 UpdateFrequency: This is a static dataset; however, tutorials and resources will be updated as they are developed.
 Tags:
   - medicine
@@ -11,11 +11,11 @@ Tags:
   - life sciences
   - aws-pds
   
-License: [CC-BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/) 
+License: "[CC-BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/)"
 Resources:
   - Description: Clinical Ultrasound Image Repository
     ARN: arn:aws:s3:::clinical-ultrasound-image-repository
     Region: us-west-2
     Type: S3 Bucket
     Explore:
-    - '[Browse Bucket](https://clinical-ultrasound-image-repository.s3.amazonaws.com/download.html)'
+    - "[Browse Bucket](https://clinical-ultrasound-image-repository.s3.amazonaws.com/download.html)"
