--- a/datasets/noaa-ocs-hydrodata.yaml
+++ b/datasets/noaa-ocs-hydrodata.yaml
@@ -28,6 +28,8 @@ Resources:
     Type: S3 Bucket
     Explore:
       - '[Browse Bucket](https://noaa-ocs-hydrodata-pds.s3.amazonaws.com/index.html)'
+      - '[STAC Catalog](https://noaa-ocs-hydrodata-pds.s3.amazonaws.com/catalog.json)'
+      - '[STAC Browser](https://radiantearth.github.io/stac-browser/#/external/noaa-ocs-hydrodata-pds.s3.amazonaws.com/catalog.json?.language=en)'
   - Description: NOAA Office of Coast Survey Hydrographic Survey Data New Object Notification
     ARN: arn:aws:sns:us-east-1:709902155096:NewOCSHYDROObject
     Region: us-east-1
