--- a/datasets/cmas-data-warehouse.yaml
+++ b/datasets/cmas-data-warehouse.yaml
@@ -73,6 +73,12 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse Bucket](https://cmaq-12us4-cracmm3-modeling-platform-2023.s3.amazonaws.com/index.html)'
+  - Description: CMAQ Model Versions 5.5 CRACMM2 Input Data (2022r1) -- 12/22/2021 - 12/31/2022 12km CONUS
+    ARN:  arn:aws:s3::::::cmaq-12us1-cracmm2-modeling-platform-2022
+    Region: us-east-1
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Bucket](https://cmaq-12us1-cracmm2-modeling-platform-2022.s3.amazonaws.com/index.html)'
   - Description: EPA 2022 Modeling Platform
     ARN: arn:aws:s3:::epa-2022-modeling-platform
     Region: us-east-1
