ok: Update ucsf-rmac.yaml
format for ADX

--- a/datasets/ucsf-rmac.yaml
+++ b/datasets/ucsf-rmac.yaml
@@ -43,11 +43,6 @@ DataAtWork:
       URL: https://github.com/LarsonLab/UCSF-RMaC
       AuthorName: Peder Larson
       AuthorURL: https://scholar.google.com/citations?user=LrQ7YekAAAAJ&hl=en
-  Publications:
-    - Title:
-      URL:
-      AuthorName:
-      AuthorURL:
 DeprecatedNotice:
-ADXCategories: Healthcare & Life Sciences Data
-  -    
+ADXCategories: 
+  -    Healthcare & Life Sciences Data
