ok: Update deepdrug-dpeb.yml
tags + ADX categories

--- a/datasets/deepdrug-dpeb.yml
+++ b/datasets/deepdrug-dpeb.yml
@@ -10,6 +10,7 @@ Tags:
   - structural biology
   - machine learning
   - life sciences
+  - aws-pds
 License: MIT
 Citation: "Sajol MSI et al. DeepDrug Protein Embeddings Bank (DPEB) was accessed on [DATE] at https://registry.opendata.aws/dpeb"
 Resources:
@@ -27,7 +28,6 @@ DataAtWork:
       AuthorName: Md. Saiful Islam Sajol
       AuthorURL: https://github.com/deepdrugai
       Services: EC2
-
   Tools & Applications:
     - Title: DPEB Explorer Tool
       URL: https://github.com/deepdrugai/DPEB
@@ -39,5 +39,4 @@ DataAtWork:
       AuthorName: Sajol MSI, Rajasekaran M, Bess A, Alvin C, Mukhopadhyay S
       AuthorURL: https://github.com/deepdrugai/DPEB
 ADXCategories:
-  - Life Sciences
-  - Artificial Intelligence
+  - Healthcare & Life Sciences Data
