ok: Update deepdrug-dpeb.yaml
syntax error

--- a/datasets/deepdrug-dpeb.yaml
+++ b/datasets/deepdrug-dpeb.yaml
@@ -34,7 +34,7 @@ DataAtWork:
       AuthorName: DeepDrug Lab
       AuthorURL: https://github.com/deepdrugai
   Publications:
-    - Title: A Multimodal Human Protein Embeddings Database: DeepDrug Protein Embeddings Bank (DPEB)
+    - Title: A Multimodal Human Protein Embeddings Database - DeepDrug Protein Embeddings Bank (DPEB)
       URL: https://doi.org/10.XXXX/nar.dpeb2025
       AuthorName: Sajol MSI, Rajasekaran M, Bess A, Alvin C, Mukhopadhyay S
       AuthorURL: https://github.com/deepdrugai/DPEB
