ok: Update deepdrug-dpeb.yaml
removing explore and editing typo on region

--- a/datasets/deepdrug-dpeb.yaml
+++ b/datasets/deepdrug-dpeb.yaml
@@ -16,10 +16,8 @@ Citation: "Sajol MSI et al. DeepDrug Protein Embeddings Bank (DPEB) was accessed
 Resources:
   - Description: Multimodal human protein embeddings (AlphaFold2, BioEmbeddings, ESM-2, ProtVec) with JSONL-formatted metadata containing FASTA, UniProt IDs, and embeddings.
     ARN: arn:aws:s3:::deepdrug-dpeb-human-protein-embeddings
-    Region: us-cst-1
+    Region: us-east-1
     Type: S3 Bucket
-    Explore:
-      - "https://github.com/deepdrugai/DPEB"
 DataAtWork:
   Tutorials:
     - Title: Aggregating and Clustering AlphaFold2 Embeddings from DPEB
