ok: Update deepdrug-dpeb.yaml
tutorial format

--- a/datasets/deepdrug-dpeb.yaml
+++ b/datasets/deepdrug-dpeb.yaml
@@ -22,10 +22,11 @@ DataAtWork:
   Tutorials:
     - Title: Aggregating and Clustering AlphaFold2 Embeddings from DPEB
       URL: https://github.com/deepdrugai/DPEB/tree/main
-      NotebookURL: https://github.com/deepdrugai/DPEB/tree/main/tutorial
+      NotebookURL: https://github.com/deepdrugai/DPEB/blob/main/tutorial/tutorial_clustering.py
       AuthorName: Md. Saiful Islam Sajol
       AuthorURL: https://github.com/deepdrugai
-      Services: EC2
+      Services: 
+    - EC2
   Tools & Applications:
     - Title: DPEB Explorer Tool
       URL: https://github.com/deepdrugai/DPEB
